[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Images/Prototype/man-sw.png" type="Texture" id=1]
[ext_resource path="res://CharacterSystem/Scenes/WorldNPC.gd" type="Script" id=2]
[ext_resource path="res://CharacterSystem/Resources/Characters/alpha.tres" type="Resource" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 42.0119

[node name="WorldNPC" type="KinematicBody2D" groups=["npc"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
character = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
show_behind_parent = true
position = Vector2( -0.299999, -16 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 1 )

[node name="DialogProximity" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogProximity"]
shape = SubResource( 2 )

[node name="PopupPanel" type="PopupPanel" parent="."]
margin_left = -11.0
margin_top = -45.0
margin_right = 11.0
margin_bottom = -32.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0.700001, 8 )
polygon = PoolVector2Array( 13, 0, -1, -8, -16, 0, -1, 7 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -11, -31 )

[connection signal="body_entered" from="DialogProximity" to="." method="_on_DialogProximity_body_entered"]
[connection signal="body_exited" from="DialogProximity" to="." method="_on_DialogProximity_body_exited"]
